--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -23,6 +23,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "knex": "^0.20.11",
+    "pg": "^8.2.1",
+    "@restless/restless": "^0.4.2",
+    "@restless/sanitizers": "^0.2.4"
   }
 }
