--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -7,10 +7,11 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
-    "dev:watch": "nodemon --watch 'src/**/*.{js,ts}' --exec 'ts-node -T' src/index.ts",
-    "dev:start": "NODE_ENV=dev ts-node src/index.ts",
-    "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'"
+    "start": "node dist/ui/startServer.js",
+    "dev:watch": "nodemon --watch 'src/**/*.{js,ts}' --exec 'ts-node -T' src/ui/startServer.ts",
+    "dev:start": "NODE_ENV=dev ts-node src/ui/startServer.ts",
+    "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'",
+    "db:bootstrap": "cd src/integration/db && knex seed:run"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
