--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -11,7 +11,7 @@
     "dev:watch": "nodemon --watch 'src/**/*.{js,ts}' --exec 'ts-node -T' src/ui/startServer.ts",
     "dev:start": "NODE_ENV=dev ts-node src/ui/startServer.ts",
     "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'",
-    "db:bootstrap": "cd src/integration/db && knex seed:run"
+    "db:bootstrap": "knex seed:run"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
