--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -11,16 +11,23 @@
     "dev:watch": "nodemon --watch 'src/**/*.{js,ts}' --exec 'ts-node -T' src/ui/startServer.ts",
     "dev:start": "NODE_ENV=dev ts-node src/ui/startServer.ts",
     "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'",
-    "db:bootstrap": "knex seed:run"
+    "db:bootstrap": "knex seed:run",
+    "test": "NODE_ENV=test mocha -r ts-node/register/transpile-only -t 10000 'test/**/*.ts'"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/mocha": "^7.0.2",
     "@types/express": "^4.17.3",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^8.0.1"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -29,6 +36,7 @@
     "pg": "^8.2.1",
     "@restless/restless": "^0.4.2",
     "@restless/sanitizers": "^0.2.4",
-    "fast-csv": "^4.3.0"
+    "fast-csv": "^4.3.0",
+    "node-fetch": "^2.6.0"
   }
 }
