--- a/packages/assetdash/tsconfig.json
+++ b/packages/assetdash/tsconfig.json
@@ -9,11 +9,7 @@
     "noImplicitAny": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": ["node"]
+    "resolveJsonModule": true
   },
   "include": [
     "src",
