--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "dev:build": "webpack --mode development",
     "postbuild": "cp src/ui/_redirects dist/_redirects",
-    "test": "jest",
+    "test": "mocha",
     "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'",
     "clean": "rimraf dist"
   },
@@ -66,6 +66,7 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
   }
 }
