--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint '{src,test}/**/*.{js,ts,tsx}'",
     "db:bootstrap": "knex seed:run",
     "db:migrate": "knex migrate:latest",
-    "db:refresh": "knex migrate:down $$ knex migrate:latest",
+    "db:refresh": "knex migrate:down && knex migrate:latest",
     "test": "NODE_ENV=test mocha",
     "bg:start": "node dist/ui/runBackGroundProcesses.js"
   },
