--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -30,7 +30,7 @@
     "@hot-loader/react-dom": "^16.10.2",
     "@svgr/webpack": "^4.3.3",
     "@testing-library/jest-dom": "^4.1.2",
-    "@testing-library/react": "^9.3.0",
+    "@testing-library/react": "^10.4.5",
     "@types/html-webpack-plugin": "^3.2.1",
     "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/react": "^16.9.5",
@@ -47,6 +47,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.18.2",
@@ -55,7 +56,12 @@
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^16.3.0",
+    "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.8.0",
+    "mocha": "^8.0.1",
+    "mock-local-storage": "^1.1.11",
+    "nock": "^13.0.2",
     "node-sass": "^4.12.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
@@ -65,13 +71,6 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
-    "@testing-library/react": "^10.4.5",
-    "nock": "^13.0.2",
-    "jsdom": "^16.3.0",
-    "jsdom-global": "^3.0.2",
-    "mock-local-storage": "^1.1.11"
+    "webpack-dev-server": "^3.8.2"
   }
 }
