--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -13,12 +13,12 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.15",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^4.4.0",
-    "axios": "^0.19.2"
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -29,8 +29,10 @@
     "@babel/preset-typescript": "^7.7.2",
     "@hot-loader/react-dom": "^16.10.2",
     "@svgr/webpack": "^4.3.3",
+    "@testing-library/dom": "^7.21.5",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^10.4.5",
+    "@types/chai-dom": "^0.0.10",
     "@types/html-webpack-plugin": "^3.2.1",
     "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/react": "^16.9.5",
@@ -48,6 +50,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chai": "^4.2.0",
+    "chai-dom": "^1.8.2",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.18.2",
