--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -20,29 +20,30 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/mocha": "^7.0.2",
     "@types/express": "^4.17.3",
+    "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
     "mocha": "^8.0.1",
-    "nock": "^13.0.2"
+    "nock": "^13.0.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "ts-node": "^8.6.2",
-    "knex": "^0.20.11",
-    "pg": "^8.2.1",
     "@restless/restless": "^0.4.2",
     "@restless/sanitizers": "^0.2.4",
+    "date-fns": "^2.15.0",
+    "date-fns-tz": "^1.0.10",
+    "express": "^4.17.1",
     "fast-csv": "^4.3.0",
-    "node-fetch": "^2.6.0",
+    "knex": "^0.20.11",
     "knex-paginate": "^1.2.1",
-    "date-fns": "^2.15.0"
+    "node-fetch": "^2.6.0",
+    "pg": "^8.2.1",
+    "ts-node": "^8.6.2"
   }
 }
