--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -21,6 +21,7 @@
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.3",
+    "@types/luxon": "^1.24.3",
     "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -42,6 +43,7 @@
     "fast-csv": "^4.3.0",
     "knex": "^0.20.11",
     "knex-paginate": "^1.2.1",
+    "luxon": "^1.24.1",
     "node-fetch": "^2.6.0",
     "pg": "^8.2.1",
     "ts-node": "^8.6.2"
