--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.15",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
