--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -34,6 +34,7 @@
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^10.4.5",
     "@types/chai-dom": "^0.0.10",
+    "@types/copy-webpack-plugin": "^6.0.0",
     "@types/html-webpack-plugin": "^3.2.1",
     "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/react": "^16.9.5",
@@ -52,6 +53,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chai": "^4.2.0",
     "chai-dom": "^1.8.2",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.18.2",
