--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.4.1",
     "jsdom": "^16.3.0",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.8.0",
@@ -77,6 +77,7 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "favicons-webpack-plugin": "^4.2.0"
   }
 }
