--- a/packages/assetdash-ui/package.json
+++ b/packages/assetdash-ui/package.json
@@ -52,6 +52,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-dom": "^1.8.2",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.2.0",
