--- a/packages/assetdash/package.json
+++ b/packages/assetdash/package.json
@@ -15,7 +15,8 @@
     "db:migrate": "knex migrate:latest",
     "db:refresh": "knex migrate:down && knex migrate:latest",
     "test": "NODE_ENV=test mocha",
-    "bg:start": "node dist/ui/runBackGroundProcesses.js"
+    "bg:pdu:start": "node dist/ui/runPricingDataUpdater.js",
+    "bg:edu:start": "node dist/ui/runEarningsDataUpdater.js"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -44,6 +45,7 @@
     "luxon": "^1.24.1",
     "node-fetch": "^2.6.0",
     "pg": "^8.2.1",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "cron": "^1.8.2"
   }
 }
